--- a/source-api/src/androidMain/AndroidManifest.xml
+++ b/source-api/src/androidMain/AndroidManifest.xml
@@ -1,2 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest />
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
+    <uses-sdk tools:overrideLibrary="androidx.navigationevent, androidx.navigationevent.compose,
+     androidx.work.ktx, androidx.work, androidx.lifecycle.lifecycle.viewmodel.anchor, androidx.lifecycle.viewmodel,
+      androidx.lifecycle.livedata.core.ktx,androidx.lifecycle.runtime,
+     androidx.lifecycle.livedata.core, androidx.lifecycle.service, androidx.lifecycle.livedata, androidx.lifecycle.ktx,
+      androidx.lifecycle.viewmodel.ktx, androidx.lifecycle.livedata.ktx, androidx.lifecycle.runtime.compose,
+       androidx.savedstate.compose, androidx.savedstate.ktx, androidx.savedstate, androidx.lifecycle.process,
+        androidx.lifecycle.viewmodel.savedstate, androidx.lifecycle.viewmodel.compose, androidx.activity.ktx,
+         androidx.activity, androidx.activity.compose, androidx.sqlite.db, androidx.sqlite.db.framework,
+          androidx.sqlite.db.ktx, rikka.shizuku.provider, rikka.shizuku.api, rikka.shizuku.shared, rikka.shizuku.aidl"/>
+</manifest>
